# anomaly_traffic_detection

./: .gitignore  LICENSE  README.md  addr_to_csv.ipynb  address_to_country.csv  pyproject.toml
DATA_EXTRACTION/: pcap_to_json.py  readme.md
EDA/: EDA.ipynb  EDA.md  data.csv  experiments.ipynb
bot/anomaly_traffic_detection_bot/: .env  main.py
bot/anomaly_traffic_detection_bot/for_docs/: csv_AFTER_predict.csv  csv_for_predict.csv  json_for_predict.json
data_capture/: .env  .env_mock  .gitignore  __init__.py  generate_pcap.py  parsers.py  pcap_to_json.py  readme.md  url_walker.py
models/: .gitignore  ctb_model.pkl
nn_experiments/: nn.ipynb
notebooks/: .gitignore  eda.ipynb  experiments-v.2.ipynb  experiments.ipynb  experiments_oversampling.ipynb  experiments_resampling.ipynb  experiments_undersampling.ipynb  readme.md
